--- a/PhDProposal 01/Chp22-Pre2/PreResults22.tex
+++ b/PhDProposal 01/Chp22-Pre2/PreResults22.tex
@@ -15,6 +15,8 @@ movement towards open source programming languages
 Open Source, Open Access, Open Science!
 comparability
 
+!!!!cite a nice pushing for this publication here!!!!
+
 teach PhD Students from the ground up to code their own models in Python, as of yet there is a lack of coherent ressources. Definitely cite the PhytoMFTM model and publication \citep{AcevedoTrejos2016}
 
 extensible framework
