--- a/PhDProposal 01/proposal.bib
+++ b/PhDProposal 01/proposal.bib
@@ -1,3 +1,182 @@
+@article{Alvera-Azcarate2009,
+abstract = {A high-resolution (1/60°), three-dimensional numerical circulation model of the Cariaco Basin (Venezuela) is constructed by nesting the Regional Ocean Modeling System (ROMS) in the 1/12° global Hybrid Coordinate Ocean Model (HYCOM). A new bathymetry, computed by merging DBDB2 data and in situ depth measurements using optimal interpolation, is described. This new bathymetry corrects the depth of the channels that connect the Cariaco Basin with the open ocean and which play a very important role in the basin circulation. Results from a 2004 ROMS hindcast are presented. Observations (temperature, salinity, and currents) are used to validate the model results before using the model to describe the annual cycle of the Cariaco Basin and the interactions between the basin and the open ocean. Two modes of interaction are described, the first being the meanders and eddies that travel westward with the Caribbean Current, and the second being a subsurface eastward current that flows along the north coast of South America. The circulation path within the basin is directly related to the intensity of this current. Both mechanisms described play a role in the ventilation of the basin. The present study is also an example of the feasibility of one of the objectives of GODAE (Global Ocean Data Assimilation Experiment): downscaling from a large-scale model to a regional model. In particular, the nesting ratio of 5 used in this work demonstrates that a high-resolution model can be successfully nested in HYCOM. {\textcopyright} 2008 Springer-Verlag.},
+author = {Alvera-Azc{\'{a}}rate, Aida and Barth, Alexander and Weisberg, Robert H.},
+doi = {10.1007/s10236-008-0169-y},
+file = {:Users/bp/Documents/Mendeley Desktop/Alvera-Azc{\'{a}}rate2008{\_}Article{\_}ANestedModelOfTheCariacoBasinV.pdf:pdf},
+issn = {16167341},
+journal = {Ocean Dynamics},
+keywords = {Cariaco Basin,Numerical circulation model,Regional Ocean Modeling System},
+mendeley-groups = {To Read! newer stuff,PhD Proposal BibTex/cited},
+number = {1},
+pages = {97--120},
+publisher = {Springer},
+title = {{A nested model of the Cariaco Basin (Venezuela): Description of the basin's interior hydrography and interactions with the open ocean}},
+volume = {59},
+year = {2009}
+}
+
+
+@article{Richards1956,
+abstract = {The Cariaco Trench is a basin in the Caribbean Sea which is anaerobic below depths of about 375 metres to the bottom at 1,400 metres. Below ca. 250 metres the water is essentially isothermal at about 16{\textperiodcentered}9°C. and has practically uniform salinity and density. Hydrogen sulphide reaches maximum concentrations of {\textperiodcentered}03 mgA sulphide S per litre, which is about 10{\%} of the concentration found in the depths of the Black Sea. Inorganic phosphate is linearly related to the oxygen and sulphate consumption in a ratio equivalent to 235 atoms of oxygen utilized for the production of 1 atom of phosphate. The anaerobic zone is free of nitrate and nitrite, but some ammonia is present. It is suggested that most of the nitrogen arising from decomposition of organic matter is present as elementary N2 in solution. The age of the water is estimated to be between 100 and 2,000 years. The physical properties of the trench are compared with those of other isolated basins.},
+author = {Richards, Francis A. and Vaccaro, Ralph F.},
+doi = {10.1016/0146-6313(56)90005-3},
+file = {:Users/bp/Documents/Mendeley Desktop/1-s2.0-0146631356900053-main.pdf:pdf},
+issn = {01466313},
+journal = {Deep Sea Research (1953)},
+mendeley-groups = {CARIACO},
+number = {3},
+pages = {214--228},
+title = {{The Cariaco Trench, an anaerobic basin in the Caribbean Sea}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/0146631356900053},
+volume = {3},
+year = {1956}
+}
+
+
+@article{Barton2013,
+abstract = {Changes in marine plankton communities driven by environmental variability impact the marine food web and global biogeochemical cycles of carbon and other elements. To predict and assess these community shifts and their consequences, ecologists are increasingly investigating how the functional traits of plankton determine their relative fitness along environmental and biological gradients. Laboratory, field and model-ling studies are adopting this trait-based approach to map the biogeography of plankton traits that underlies variations in plankton communities. Here, we review progress towards understanding the regulatory roles of several key plankton functional traits, including cell size, N 2 -fixation and mixotrophy among phytoplank-ton, and body size, ontogeny and feeding behaviour for zooplankton. The trait biogeographical approach sheds light on what structures plankton communities in the current ocean, as well as under climate change scenarios, and also allows for finer resolution of community function because community trait composition determines the rates of significant processes, including carbon export. Although understanding of trait bio-geography is growing, uncertainties remain that stem, in part, from the paucity of observations describing plankton functional traits. Thus, in addition to recommending widespread adoption of the trait-based approach, we advocate for enhanced collection, standardisation and dissemination of plankton functional trait data.},
+author = {Barton, Andrew D. and Pershing, Andrew J. and Litchman, Elena and Record, Nicholas R. and Edwards, Kyle F. and Finkel, Zoe V. and Ki{\o}rboe, Thomas and Ward, Ben A.},
+doi = {10.1111/ele.12063},
+file = {:Users/bp/Documents/Mendeley Desktop/ele.12063.pdf:pdf},
+issn = {1461023X},
+journal = {Ecology Letters},
+keywords = {Biogeochemistry,Biogeography,Diazotroph,Microbe,Mixotrophy,Ocean,Phytoplankton,Predator-prey,Trait,Zooplankton},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {4},
+pages = {522--534},
+publisher = {Wiley Online Library},
+title = {{The biogeography of marine plankton traits}},
+volume = {16},
+year = {2013}
+}
+
+
+@article{Ward2012,
+abstract = {We present a model of diverse phytoplankton and zooplankton populations embedded in a global ocean circulation model. Physiological and ecological traits of the organisms are constrained by relationships with cell size. The model qualitatively reproduces global distributions of nutrients, biomass, and primary productivity, and captures the power-law relationship between cell size and numerical density, which has realistic slopes of between 21.3 and 20.8. We use the model to explore the global structure of marine ecosystems, highlighting the importance of both nutrient and grazer controls. The model suggests that zooplankton : phytoplankton (Z : P) biomass ratios may vary from an order of 0.1 in the oligotrophic gyres to an order of 10 in upwelling and highlatitude regions. Global estimates of the strength of bottom-up and top-down controls within plankton size classes suggest that these large-scale gradients in Z : P ratios are driven by a shift from strong bottom-up, nutrient limitation in the oligotrophic gyres to the dominance of top-down, grazing controls in more productive regions.},
+author = {Ward, B. A. and Dutkiewicz, S. and Jahn, O. and Follows, M. J.},
+doi = {10.4319/lo.2012.57.6.1877},
+file = {:Users/bp/Documents/Mendeley Desktop//Ward et al. - 2012 - A size-structured food-web model for the global ocean.pdf:pdf},
+isbn = {0024-3590},
+issn = {00243590},
+journal = {Limnology and Oceanography},
+mendeley-groups = {Ago},
+month = {nov},
+number = {6},
+pages = {1877--1891},
+publisher = {Wiley-Blackwell},
+title = {{A size-structured food-web model for the global ocean}},
+url = {http://doi.wiley.com/10.4319/lo.2012.57.6.1877},
+volume = {57},
+year = {2012}
+}
+
+
+@article{Prowe2012c,
+abstract = {The potential of marine ecosystems to adapt to ongoing environmental change is largely unknown, making prediction of consequences for nutrient and carbon cycles particularly challenging. Realizing that biodiversity might influence the adaptation potential, recent model approaches have identified bottom-up controls on patterns of phytoplankton diversity regulated by nutrient availability and seasonality. Top-down control of biodiversity, however, has not been considered in depth in such models. Here we demonstrate how zooplankton predation with prey-ratio based food preferences can enhance phytoplankton diversity in a ecosystem-circulation model with self-assembling community structure. Simulated diversity increases more than threefold under preferential grazing relative to standard density-dependent predation, and yields better agreement with observed distributions of phytoplankton diversity. The variable grazing pressure creates refuges for less competitive phytoplankton types, which reduces exclusion and improves the representation of seasonal phytoplankton succession during blooms. The type of grazing parameterization also has a significant impact on primary and net community production. Our results demonstrate how a simple parameterization of a zooplankton community response affects simulated phytoplankton community structure, diversity and dynamics, and motivates development of more detailed representations of top-down processes essential for investigating the role of diversity in marine ecosystems. {\textcopyright} 2011 Elsevier Ltd.},
+author = {Prowe, A. E.Friederike and Pahlow, Markus and Dutkiewicz, Stephanie and Follows, Michael and Oschlies, Andreas},
+doi = {10.1016/j.pocean.2011.11.016},
+file = {:Users/bp/Documents/Mendeley Desktop/Prowe et al. - 2012.pdf:pdf},
+isbn = {0079-6611},
+issn = {00796611},
+journal = {Progress in Oceanography},
+mendeley-groups = {Esteban/TopDown Zooplankton,CARIACO/Model Params},
+number = {1},
+pages = {1--13},
+pmid = {21888353},
+publisher = {Elsevier Ltd},
+title = {{Top-down control of marine phytoplankton diversity in a global ecosystem model}},
+url = {http://dx.doi.org/10.1016/j.pocean.2011.11.016},
+volume = {101},
+year = {2012}
+}
+
+
+@article{Dutkiewicz2015,
+abstract = {Phytoplankton form the foundation of the marine food web and regulate key biogeochemical processes. These organisms face multiple environmental changes1, including the decline in ocean pH (ocean acidification) caused by rising atmospheric pCO2 (ref. 2). A meta-analysis of published experimental data assessing growth rates of different phytoplankton taxa under both ambient and elevated pCO2 conditions revealed a significant range of responses. This effect of ocean acidification was incorporated into a global marine ecosystem model to explore how marine phytoplankton communities might be impacted over the course of a hypothetical twenty-first century. Results emphasized that the differing responses to elevated pCO2 caused sufficient changes in competitive fitness between phytoplankton types to significantly alter community structure. At the level of ecological function of the phytoplankton community, acidification had a greater impact than warming or reduced nutrient supply. The model suggested that longer timescales of competition- and transport-mediated adjustments are essential for predicting changes to phytoplankton community structure.},
+annote = {AGO: An interesting recent application of the DARWIN 
+
+model aiming at understanding how environmental change (acidification in this case) may reduce functionality by reducing the number of PFTs.
+
+Ben: very interesting modeling approach, using meta analysis to inform model parameters
+
+what I was thinking of before, with Klara's Data},
+author = {Dutkiewicz, Stephanie and Morris, J. Jeffrey and Follows, Michael J. and Scott, Jeffery and Levitan, Orly and Dyhrman, Sonya T. and Berman-Frank, Ilana},
+doi = {10.1038/nclimate2722},
+file = {:Users/bp/Documents/Mendeley Desktop/Dutkiewicz et al. - 2015 - Impact of ocean acidification on the structure of future phytoplankton communities.pdf:pdf},
+isbn = {1758-678X},
+issn = {17586798},
+journal = {Nature Climate Change},
+keywords = {3D-Model,Climate,Ecology,Marine biology,change ecology},
+mendeley-groups = {Ago},
+mendeley-tags = {3D-Model},
+month = {nov},
+number = {11},
+pages = {1002--1006},
+publisher = {Nature Publishing Group},
+title = {{Impact of ocean acidification on the structure of future phytoplankton communities}},
+url = {http://www.nature.com/articles/nclimate2722},
+volume = {5},
+year = {2015}
+}
+
+
+@article{Follows2007d,
+abstract = {A marine ecosystem model seeded with many phytoplankton types, whose physiological traits were randomly assigned from ranges defined by field and laboratory data, generated an emergent community structure and biogeography consistent with observed global phytoplankton distributions. The modeled organisms included types analogous to the marine cyanobacterium Prochlorococcus. Their emergent global distributions and physiological properties simultaneously correspond to observations. This flexible representation of community structure can be used to explore relations between ecosystems, biogeochemical cycles, and climate change.},
+annote = {AGO: This is the famous DARWIN model (http://darwinproject.mit.edu), a project that sees in Mick Follows and Stephanie Dutkiewicz, both at MIT, the ‘spiritual' leaders. This model has a hybrid representation of PFTs and phytoplankton traits. Andrew is the expert here, see below.
+
+interesting and elegant,,, quite focused on prochlorococcus},
+author = {Follows, Michael J and Dutkiewicz, Stephanie and Grant, Scott and Chisholm, Sallie W},
+doi = {10.1126/science.1138544},
+file = {:Users/bp/Documents/Mendeley Desktop/Follows-SOM.pdf:pdf;:Users/bp/Documents/Mendeley Desktop//Follows et al. - 2007 - Emergent biogeography of microbial communities in a model ocean.pdf:pdf},
+isbn = {0036-8075},
+issn = {00368075},
+journal = {Science},
+keywords = {3D-Model},
+mendeley-groups = {Ago,Esteban,To Read!,DAAD app},
+mendeley-tags = {3D-Model},
+month = {mar},
+number = {5820},
+pages = {1843--1846},
+pmid = {17395828},
+publisher = {American Association for the Advancement of Science},
+title = {{Emergent biogeography of microbial communities in a model ocean}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/17395828},
+volume = {315},
+year = {2007}
+}
+
+
+@article{Follows2011c,
+abstract = {Biogeochemical cycles in the ocean are mediated by complex and diverse microbial communities. Over the past decade, marine ecosystem and biogeochemistry models have begun to address some of this diversity by resolving several groups of (mostly autotrophic) plankton, differentiated by biogeochemical function. Here, we review recent model approaches that are rooted in the notion that an even richer diversity is fundamental to the organization of marine microbial communities. These models begin to resolve, and address the significance of, diversity within functional groups. Seeded with diverse populations spanning prescribed regions of trait space, these simulations self-select community structure according to relative fitness in the virtual environment. Such models are suited to considering ecological questions, such as the regulation of patterns of biodiversity, and to simulating the response to changing environments. A key issue for all such models is the constraint of viable trait space and trade-offs. Size-structuring and mechanistic descriptions of energy and resource allocation at the individual level can rationalize these constraints.},
+annote = {From Duplicate 2 (Modeling Diverse Communities of Marine Microbes - Follows, Michael J.; Dutkiewicz, Stephanie)
+
+AGO: A very nice review of models aiming at capturing diversity.
+
+read: burd et al 2002
+
+basically very important to what I will do
+
+explains the background nicely, but does not mention Esteban (too early for that)},
+author = {Follows, Michael J. and Dutkiewicz, Stephanie},
+doi = {10.1146/annurev-marine-120709-142848},
+file = {:Users/bp/Documents/Mendeley Desktop/follows2011.pdf:pdf;:Users/bp/Documents/Mendeley Desktop/annurev-marine-120709-142848.pdf:pdf},
+isbn = {1941-1405$\backslash$r978-0-8243-4503-7},
+issn = {1941-1405},
+journal = {Annual Review of Marine Science},
+keywords = {adaptive,community structure,microbes,phytoplankton,self-selection,trade-offs,traits},
+mendeley-groups = {DAAD app,Esteban,CARIACO/8MonthsReport - Jacobs},
+month = {jan},
+number = {1},
+pages = {427--451},
+pmid = {21329212},
+publisher = {Annual Reviews},
+title = {{Modeling Diverse Communities of Marine Microbes}},
+url = {http://www.annualreviews.org/doi/10.1146/annurev-marine-120709-142848},
+volume = {3},
+year = {2011}
+}
+
+
 @article{Acevedo-Trejos2018,
 abstract = {Trait diversity, a key component of biodiversity, mediates many essential ecosystem functions and services. However, the mechanisms behind such relationships at large spatial scales are not fully understood. Here we adopt the functional biogeography approach to investigate how the size composition of phytoplankton communities relates to primary production and export production along a broad latitudinal gradient. Using in situ phytoplankton size distribution data and a trait-based model, we find an increase in the average phytoplankton size, size diversity, primary production and export when moving from low to high latitudes. Our analysis indicates that the interplay between spatio-temporal heterogeneities in environmental conditions and a trade-off between the high affinity for nutrients of smaller cells and the ability to avoid predation by larger cells are the main mechanisms driving the observed patterns. Our results also suggest that variations in size diversity alone do not directly lead to changes in primary production and export. The trade-off thus introduces a feedback that influences the relationship between size diversity and ecosystem functions. These findings support the importance of environmentally mediated trade-offs as crucial mechanisms shaping biodiversity and ecosystem function relationships at large spatial scales.},
 annote = {AGO: This is an application of Esteban's model (above )for understanding the drivers of broad biogeographical patterns of phytoplankton size diversity, specifically targeting the Atlantic Meridional Transect region. Diversity here is sustained with immigration.},
@@ -606,26 +785,18 @@ year = {2008}
 }
 
 
-@article{Engelen2015,
-abstract = {Marine plankton support global biological and geochemical processes. Surveys of their biodiversity have hitherto been geographically restricted and have not accounted for the full range of plankton size.We assessed eukaryotic diversity from 334 size-fractionated photic-zone plankton communities collected across tropical and temperate oceans during the circumglobal Tara Oceans expedition.We analyzed 18S ribosomal DNA sequences across the intermediate plankton-size spectrum from the smallest unicellular eukaryotes (protists, {\textgreater}0.8 micrometers) to small animals of a few millimeters. Eukaryotic ribosomal diversity saturated at {\~{}}150,000 operational taxonomic units, about one-third of which could not be assigned to known eukaryotic groups. Diversity emerged at all taxonomic levels, both within the groups comprising the {\~{}}11,200 cataloged morphospecies of eukaryotic plankton and among twice as many other deep-branching lineages of unappreciated importance in plankton ecology studies. Most eukaryotic plankton biodiversity belonged to heterotrophic protistan groups, particularly those known to be parasites or symbiotic hosts. he},
-archivePrefix = {arXiv},
-arxivId = {arXiv:gr-qc/9809069v1},
-author = {Engelen, S and Hingamp, P and Sieracki, M and Vargas, Cd and Audic, S and Henry, N and Decelle, J and Mah{\'{e}}, F and Logares, R and Lara, E and Berney, C and Bescot, Nl and Probert, I and Carmichael, M and Poulain, J and Romac, S},
-doi = {10.1007/s13398-014-0173-7.2},
-eprint = {9809069v1},
-isbn = {9780874216561},
-issn = {0717-6163},
+@article{DeVargas2015,
+author = {{De Vargas}, Colomban and Audic, St{\'{e}}phane and Henry, Nicolas and Decelle, Johan and Mah{\'{e}}, Fr{\'{e}}d{\'{e}}ric and Logares, Ramiro and Lara, Enrique and Berney, C{\'{e}}dric and {Le Bescot}, Noan and Probert, Ian},
+issn = {0036-8075},
 journal = {Science},
-mendeley-groups = {PhD Proposal BibTex/cited},
 number = {6237},
-pages = {1261605--1/11},
-pmid = {15003161},
-primaryClass = {arXiv:gr-qc},
+pages = {1261605},
 publisher = {American Association for the Advancement of Science},
 title = {{Eukaryotic plankton diversity in the sunlit ocean}},
 volume = {348},
 year = {2015}
 }
+
 
 
 @article{IrwinAndrewJ.Finkel2017b,
